<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/office_building"
            android:title="@string/menu_aboutUs" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_circle_black_24"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_pets"
            android:icon="@drawable/baseline_pets_black_24"
            android:title="@string/menu_pets" />

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/baseline_shower_black_24"
            android:title="@string/menu_services" />

        <item
            android:id="@+id/nav_contactUs"
            android:icon="@drawable/email"
            android:title="@string/menu_contactUs" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_black_24"
            android:title="@string/menu_logout" />
    </group>
</menu>