<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pet.AddPetFragment">

    <ScrollView
        android:id="@+id/scrollViewAddPet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="205dp"
            android:paddingTop="28dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_pet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_name_label"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_pet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_pet_name"
                tools:ignore="TextContrastCheck"
                android:importantForAutofill="no"
                android:autofillHints="name"
                android:hint="@string/pet_name_hint" />

            <TextView
                android:id="@+id/txt_pet_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_birthdate_label"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_pet_name" />

            <DatePicker
                android:id="@+id/edt_pet_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="date"
                android:minHeight="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_pet_birthdate"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/txt_pet_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_gender_label"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_pet_birthdate" />

            <RadioGroup
                android:id="@+id/rbg_pet_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_pet_gender">
                <RadioButton
                    android:id="@+id/pet_is_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_gender_male_label" />

                <RadioButton
                    android:id="@+id/pet_is_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_gender_female_label"
                    app:layout_constraintLeft_toLeftOf="@+id/pet_is_male" />
            </RadioGroup>

            <TextView
                android:id="@+id/txt_pet_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_weight_label"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rbg_pet_gender" />

            <EditText
                android:id="@+id/pet_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pet_weight_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_pet_weight"
                tools:ignore="TextContrastCheck" />

            <CheckBox
                android:id="@+id/pet_is_sterilized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/pet_sterilized_label"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pet_weight" />

            <CheckBox
                android:id="@+id/pet_is_vaccined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/pet_vaccines_label"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pet_is_sterilized" />

            <TextView
                android:id="@+id/txt_pet_observations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_observations_label"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pet_is_vaccined" />

            <EditText
                android:id="@+id/pet_additional_observations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textSize="18sp"
                android:hint="@string/pet_observations_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_pet_observations"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txt_pet_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_photo_label"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pet_additional_observations" />

            <ImageView
                android:id="@+id/pet_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_stat_ic_notification"
                android:contentDescription="@string/pet_photo_cd_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_pet_photo"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/pet_save_changes_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pet_photo"/>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/pet_delete_pet_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_save"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>