<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="109dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="17dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/notification_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:minHeight="48dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="109dp"
        android:layout_height="0dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="27dp"
        android:text="@string/address"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_email" />

    <EditText
        android:id="@+id/notification_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:minHeight="48dp"
        android:autofillHints="postalAddress"
        android:hint="@string/address_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_address"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="109dp"
        android:layout_height="0dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="27dp"
        android:text="@string/phone"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_address" />

    <EditText
        android:id="@+id/notification_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:minHeight="48dp"
        android:autofillHints="phone"
        android:hint="@string/phone_placeholder"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/notification_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="61dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>