<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.serviceflow.estheticist.EndServicesEstheticistActivity">

    <ScrollView
        android:id="@+id/scrollViewAddPet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="205dp"
            android:paddingTop="28dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_logo_header"
                android:layout_width="351dp"
                android:layout_height="140dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo1" />

            <TextView
                android:id="@+id/txt_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_estheticist_finish"
                android:textSize="24sp"
                android:justificationMode="inter_word"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_logo_header"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/txt_pet_observations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/pet_observations_label"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_info" />

            <EditText
                android:id="@+id/pet_additional_observations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textSize="18sp"
                android:hint="@string/pet_estheticist_observations_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_pet_observations"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txt_pet_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/pet_estheticist_photo_finish_label"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pet_additional_observations" />

            <ImageView
                android:id="@+id/pet_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_stat_ic_notification"
                android:contentDescription="@string/pet_photo_cd_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_pet_photo"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/pet_estheticist_end_services"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pet_photo"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>